<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- focusable and related properties to workaround http://stackoverflow.com/q/16182331-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="14dp"
            android:text="@string/section_master_user_id" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:paddingRight="10dip"
                    android:text="@string/label_name" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text="" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:paddingRight="10dip"
                    android:text="@string/label_email" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text="" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:paddingRight="10dip"
                    android:text="@string/label_comment" />

                <TextView
                    android:id="@+id/comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text="" />
            </TableRow>
        </TableLayout>

        <TextView
            style="@style/SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="14dp"
            android:text="@string/section_master_key" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:shrinkColumns="1">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/label_key_id" />

                <TextView
                    android:id="@+id/key_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text=""
                    android:typeface="monospace" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/label_algorithm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/label_algorithm" />

                <TextView
                    android:id="@+id/algorithm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text="" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tableRow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/label_fingerprint" />

                <TextView
                    android:id="@+id/fingerprint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:typeface="monospace" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/label_creation" />

                <TextView
                    android:id="@+id/creation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/label_expiry" />

                <TextView
                    android:id="@+id/expiry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/label_secret_key" />

                <TextView
                    android:id="@+id/secret_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:typeface="monospace" />
            </TableRow>
        </TableLayout>

        <TextView
            style="@style/SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="14dp"
            android:text="@string/section_user_ids" />

        <org.sufficientlysecure.keychain.ui.widget.FixedListView
            android:id="@+id/user_ids"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="14dp"
            android:text="@string/section_keys" />

        <org.sufficientlysecure.keychain.ui.widget.FixedListView
            android:id="@+id/keys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="14dp"
            android:text="@string/section_actions" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/action_edit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="4dp"
            android:layout_marginBottom="10dp"
            android:text="@string/key_view_action_edit"
            bootstrapbutton:bb_icon_left="fa-key"
            bootstrapbutton:bb_type="info"
            android:visibility="gone" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/action_encrypt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="4dp"
            android:layout_marginBottom="10dp"
            android:text="@string/key_view_action_encrypt"
            bootstrapbutton:bb_icon_left="fa-lock"
            bootstrapbutton:bb_type="info" />


        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/action_certify"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="4dp"
            android:layout_marginBottom="10dp"
            android:text="@string/key_view_action_certify"
            bootstrapbutton:bb_icon_left="fa-pencil"
            bootstrapbutton:bb_type="info" />

    </LinearLayout>

</ScrollView>
