<?xml version="1.0" encoding="utf-8"?>
<org.sufficientlysecure.keychain.ui.widget.KeyEditor xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TableLayout
            android:id="@+id/table_keylayout"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:stretchColumns="1" >

            <TableRow>

                <TextView
                    android:id="@+id/label_keyId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/label_key_id" />

                <TextView
                    android:id="@+id/keyId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text="00000000 00000000"
                    android:typeface="monospace" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/label_algorithm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/label_algorithm" />

                <TextView
                    android:id="@+id/algorithm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text="@string/label_name" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/label_creation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/label_creation" />

                <TextView
                    android:id="@+id/creation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/label_expiry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/label_expiry" />

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/expiry"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/none"
                    bootstrapbutton:bb_size="small"
                    bootstrapbutton:bb_type="default" />
            </TableRow>

            <TableRow
                android:id="@+id/row_certify">

                <TextView
                    android:id="@+id/label_usage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/label_usage" />
                <CheckBox
                    android:id="@+id/chkCertify"
                    android:enabled = "false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flag_certify" />
            </TableRow>

            <TableRow
                android:id="@+id/row_sign">

                <TextView
                    android:id="@+id/label_usage2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/label_usage" />
                <CheckBox
                    android:id="@+id/chkSign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flag_sign" />
            </TableRow>

            <TableRow
                android:id="@+id/row_encrypt">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dip" />
                <CheckBox
                    android:id="@+id/chkEncrypt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flag_encrypt" />
            </TableRow>

            <TableRow
                android:id="@+id/row_authenticate">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dip" />
                <CheckBox
                    android:id="@+id/chkAuthenticate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flag_authenticate" />
            </TableRow>
        </TableLayout>

        <ImageButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/minus"
            android:background="@drawable/button_rounded_red"/>
    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="?android:attr/listDivider" />

</org.sufficientlysecure.keychain.ui.widget.KeyEditor>

